# AutoInterview

./: .env  .gitignore  RAG.ipynb  README.md  pipelines.py  pyproject.toml  setup.py  utils.py
.ipynb_checkpoints/: QueryTuning-checkpoint.ipynb  RAG-checkpoint.ipynb
app/: app.py  rag.py
app/Profiles/Jesus/: AI_Thesis (1).pdf:Zone.Identifier  JesusGarciaCoverLetterML6.pdf:Zone.Identifier  JesusGarciaRamirezCVDR.pdf:Zone.Identifier
app/db/chroma/RAG/d189f2e0-8ac1-4b60-8b48-582f2099df0a/: index_metadata.pickle
autointerview/agents/: selfRAG.py
autointerview/pipelines/: selfRAG.py
deploy/: basic_llm.py
